[FIX] change header gap FINE ESERCIZIO

--- a/css/style.css
+++ b/css/style.css
@@ -55,26 +55,6 @@ footer a {
     color: rgb(2, 169, 2);
     text-decoration: none;
 }
-.fa-facebook-f {
-    padding-left: 5%;
-    padding-right: 5%;
-}
-.height-50 {
-    height: 50px;
-}
-.height-100 {
-    height: 100px;
-}
-.height-150 {
-    height: 150px;
-}
-.height-250 {
-    height: 250px;
-}
-.height-300 {
-    height: 300px;
-}
-
 .cards [class*="col"] {
     border: 10px solid white;
     border-radius: 20px;
